force-app/main/default/objects/RCA_Currency_Format__mdt/RCA_Currency_Format__mdt.object-meta.xml
<CustomObject>
    <label>RCA Currency Format</label>
    <pluralLabel>RCA Currency Formats</pluralLabel>
</CustomObject>