force-app/main/default/objects/RCA_Currency_Format__mdt/fields/Decimal_Places__c.field-meta.xml
<CustomField>
    <fullName>Decimal_Places__c</fullName>
    <label>Decimal Places</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <default>true</default>
                <label>2</label>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>