force-app/main/default/objects/RCA_Currency_Format__mdt/fields/Decimal_Separator__c.field-meta.xml
<CustomField>
    <fullName>Decimal_Separator__c</fullName>
    <label>Decimal Separator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dot</fullName>
                <default>true</default>
                <label>Dot</label>
            </value>
            <value>
                <fullName>Comma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>