force-app/main/default/objects/RCA_Currency_Format__mdt/fields/Symbol_Position__c.field-meta.xml
<CustomField>
    <fullName>Symbol_Position__c</fullName>
    <label>Symbol Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prefix</fullName>
                <default>true</default>
                <label>Prefix</label>
            </value>
            <value>
                <fullName>Suffix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>